tests/suppress_incremental/suppress_incremental.exp
After start:
No errors!

After introducing an error:
test.js:3
  3: (123: string); // error
      ^^^ number. This type is incompatible with
  3: (123: string); // error
           ^^^^^^ string


Found 1 error

After suppressing the error:
No errors!

After fixing the error, leaving the suppression:
test.js:3
  3: // $FlowIssue
     ^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 1 error

After removing the unused suppression:
No errors!
